--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -85,4 +85,7 @@
 a {
   text-decoration: none;
   color: #000;
-}
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
